--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_clean_architecture">
    <application
-        android:label="flutter_clean_architecture"
+        android:label="Movies Viewr"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
